deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app-cont
  template:
    metadata:
      labels:
        app: hello-app-cont
    spec:
      containers:
      - name: hello-app
        image: hello-app:v0.6
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 80
        livenessProbe:
          httpGet:
            port: 8000
            path: /
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
